--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: corne_v3_left
   - board: nice_nano_v2
-    shield: corne_right
+    shield: corne_v3_right
