--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -1,6 +1,16 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+
+# Set some config for lower power usage
+
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+
+# Configure the light show
+
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=q
