--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -7,10 +7,15 @@ CONFIG_ZMK_DISPLAY=y
 
 # Set some config for lower power usage
 
+CONFIG_ZMK_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+CONFIG_ZMK_SLEEP=y
 
 # Configure the light show
 
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
