feat: never put the board to sleep

--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -8,11 +8,15 @@ CONFIG_ZMK_DISPLAY=y
 # Set some config for lower power usage
 
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=300000 # 5 minutes
+
+# set to y if battery powered (oled fix required, see branch)
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 
 # Configure the light show
 
