fix: cannot put comments at end of line

--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -11,7 +11,7 @@ CONFIG_ZMK_EXT_POWER=y
 
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
-CONFIG_ZMK_IDLE_TIMEOUT=300000 # 5 minutes
+CONFIG_ZMK_IDLE_TIMEOUT=300000
 
 # set to y if battery powered (oled fix required, see branch)
 CONFIG_ZMK_SLEEP=n
