feat: display changes, plus peripheral for right

--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -4,19 +4,21 @@ CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Set some config for lower power usage
 
 CONFIG_ZMK_EXT_POWER=y
 
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=50
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 
 # set to y if battery powered (oled fix required, see branch)
-CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 
 # Configure the light show
 
