--- a/config/boards/shields/corne_v3/corne_v3_right.conf
+++ b/config/boards/shields/corne_v3/corne_v3_right.conf
@@ -4,5 +4,5 @@ CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-CONFIG_ZMK_WPM=y
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_WPM=n
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
