feat: more futzing around

--- a/config/boards/shields/corne_v3/corne_v3_right.conf
+++ b/config/boards/shields/corne_v3/corne_v3_right.conf
@@ -1,8 +1,32 @@
-CONFIG_ZMK_DISPLAY=y
+# Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=n
 CONFIG_ZMK_WPM=n
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
+
+# Set some config for lower power usage
+
+CONFIG_ZMK_EXT_POWER=y
+
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
+CONFIG_ZMK_IDLE_TIMEOUT=300000
+
+# set to y if battery powered (oled fix required, see branch)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
+
+# Configure the light show
+
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
+
+# Name keyboard
+
+CONFIG_ZMK_KEYBOARD_NAME="BoM Corne"
