feat: turn off rgb entirely

--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -1,6 +1,6 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -13,12 +13,12 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_EXT_POWER=y
 
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=10
+CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=0
 CONFIG_ZMK_IDLE_TIMEOUT=300000
 
 # set to y if battery powered (oled fix required, see branch)
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 
 # Configure the light show
