feat: turn off sleep

--- a/config/boards/shields/corne_v3/corne_v3_right.conf
+++ b/config/boards/shields/corne_v3/corne_v3_right.conf
@@ -14,10 +14,10 @@ CONFIG_ZMK_EXT_POWER=y
 
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=0
-CONFIG_ZMK_IDLE_TIMEOUT=300000
 
 # set to y if battery powered (oled fix required, see branch)
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_IDLE_TIMEOUT=300000
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=n
 
