--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -1,5 +1,6 @@
+CONFIG_ZMK_SPLIT=y
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=n
 
 # Uncomment the following line to enable the Corne OLED Display
