--- a/config/corne_v3.conf
+++ b/config/corne_v3.conf
@@ -1,6 +1,4 @@
 CONFIG_ZMK_SPLIT=y
-# Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_WS2812_STRIP=n
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -9,7 +7,6 @@ CONFIG_ZMK_WPM=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Set some config for lower power usage
-
 CONFIG_ZMK_EXT_POWER=y
 
 # set to y if battery powered (oled fix required, see branch)
@@ -18,6 +15,7 @@ CONFIG_ZMK_IDLE_TIMEOUT=300000
 
 # Configure the light show
 
+CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
